Resolve all unused and deprecated warnnings
cleanup imports